--- a/styles/header.css
+++ b/styles/header.css
@@ -23,10 +23,30 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
-.circle img{
+.default-image {
+    position: absolute;
     width: 100%;
+    transition: opacity 500ms ease-in-out;
 }
+
+.hover-image {
+    position: absolute;
+    padding-top: 25%;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 500ms ease-in-out;
+}
+
+.circle:hover .default-image {
+    opacity: 0;
+}
+
+.circle:hover .hover-image {
+    opacity: 1;
+}
+
 nav{
     margin-bottom: 120px;
 }
